Push Docker image also to ghcr.io

--- a/.github/workflows/random.yml
+++ b/.github/workflows/random.yml
@@ -1,10 +1,22 @@
 name: Random
 env:
   DOCKER_IMAGE: wyrihaximusnet/default-backend
+  DOCKER_IMAGE_REGISTRIES_SECRET_MAPPING: '{"ghcr.io":"GHCR_TOKEN","docker.io":"HUB_PASSCODE"}'
 on:
   schedule:
     - cron:  '0 * * * *'
 jobs:
+  registry-matrix:
+    name: Extract registries from registry secret mapping
+    runs-on: ubuntu-latest
+    outputs:
+      registry: ${{ steps.registry-matrix.outputs.registry }}
+    steps:
+      - uses: actions/checkout@v1
+      - id: registry-matrix
+        name: Extract registries from registry secret mapping
+        run: |
+          echo "::set-output name=registry::$(printenv DOCKER_IMAGE_REGISTRIES_SECRET_MAPPING | jq -c 'keys')"
   lint-dockerfile:
     runs-on: ubuntu-latest
     steps:
@@ -34,9 +46,15 @@ jobs:
           name: docker-image-random
           path: ./docker-image
   push-image:
+    name: Push to ${{ matrix.registry }}
     needs:
       - build-docker-image
+      - registry-matrix
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        registry: ${{ fromJson(needs.registry-matrix.outputs.registry) }}
     steps:
       - uses: actions/download-artifact@master
         if: (github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/master'
@@ -47,19 +65,25 @@ jobs:
         if: (github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/master'
       - run: rm -Rf ./docker-image/
         if: (github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/master'
-      - name: Login to Docker Hub
+      - name: Login to ${{ matrix.registry }}
         if: (github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/master'
         run: |
           echo "${{ secrets.HUB_PASSCODE }}" | \
-          docker login \
+          docker login ${{ matrix.registry }} \
             --username "${{ secrets.HUB_USERNAME }}" \
             --password-stdin
+        env:
+          DOCKER_USER: ${{ secrets.HUB_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets[fromJson(env.DOCKER_IMAGE_REGISTRIES_SECRET_MAPPING)[matrix.registry]] }}
       - name: Docker info
         if: (github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/master'
         run: docker info
       - name: Echo full tag
         if: (github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/master'
-        run: echo -e "${DOCKER_IMAGE}:random"
+        run: docker tag ${DOCKER_IMAGE}:random ${{ matrix.registry }}/${DOCKER_IMAGE}:random
+      - name: Echo full tag
+        if: (github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/master'
+        run: echo -e "${{ matrix.registry }}/${DOCKER_IMAGE}:random"
       - name: Push image to Docker Hub
         if: (github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/master'
-        run: docker push "${DOCKER_IMAGE}:random"
+        run: docker push "${{ matrix.registry }}/${DOCKER_IMAGE}:random"
