--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,22 @@
 name: Continuous Integration
 env:
   DOCKER_IMAGE: wyrihaximusnet/default-backend
+  DOCKER_IMAGE_REGISTRIES_SECRET_MAPPING: '{"ghcr.io":"GHCR_TOKEN","docker.io":"HUB_PASSCODE"}'
 on:
   push:
   pull_request:
 jobs:
+  registry-matrix:
+    name: Extract registries from registry secret mapping
+    runs-on: ubuntu-latest
+    outputs:
+      registry: ${{ steps.registry-matrix.outputs.registry }}
+    steps:
+      - uses: actions/checkout@v1
+      - id: registry-matrix
+        name: Extract registries from registry secret mapping
+        run: |
+          echo "::set-output name=registry::$(printenv DOCKER_IMAGE_REGISTRIES_SECRET_MAPPING | jq -c 'keys')"
   generate-image-strategy:
     name: Generate Image Strategy
     runs-on: ubuntu-latest
@@ -125,12 +137,16 @@ jobs:
         env:
           IMAGE_ID: ${{ steps.ps.outputs.id }}
   push-image:
+    name: Push ${{ matrix.image }} to ${{ matrix.registry }}
     strategy:
+      fail-fast: false
       matrix:
         image: ${{ fromJson(needs.generate-image-strategy.outputs.images) }}
+        registry: ${{ fromJson(needs.registry-matrix.outputs.registry) }}
     needs:
       - generate-image-strategy
       - tests
+      - registry-matrix
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@master
@@ -142,19 +158,25 @@ jobs:
         if: (github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/master'
       - run: rm -Rf ./docker-image/
         if: (github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/master'
-      - name: Login to Docker Hub
+      - name: Login to ${{ matrix.registry }}
         if: (github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/master'
         run: |
           echo "${{ secrets.HUB_PASSCODE }}" | \
-          docker login \
+          docker login ${{ matrix.registry }} \
             --username "${{ secrets.HUB_USERNAME }}" \
             --password-stdin
+        env:
+          DOCKER_USER: ${{ secrets.HUB_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets[fromJson(env.DOCKER_IMAGE_REGISTRIES_SECRET_MAPPING)[matrix.registry]] }}
       - name: Docker info
         if: (github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/master'
         run: docker info
       - name: Echo full tag
         if: (github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/master'
-        run: echo -e "${DOCKER_IMAGE}:${{ matrix.image }}"
+        run: docker tag ${DOCKER_IMAGE}:${{ matrix.image }} ${{ matrix.registry }}/${DOCKER_IMAGE}:${{ matrix.image }}
+      - name: Echo full tag
+        if: (github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/master'
+        run: echo -e "${{ matrix.registry }}/${DOCKER_IMAGE}:${{ matrix.image }}"
       - name: Push image to Docker Hub
         if: (github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/master'
-        run: docker push "${DOCKER_IMAGE}:${{ matrix.image }}"
+        run: docker push "${{ matrix.registry }}/${DOCKER_IMAGE}:${{ matrix.image }}"
